* 2013-03-17 - thorben.betten@open-xchange.com

 - Fix for bug 25350: Reduced repetitive behavior to necessary sanitizing steps
 - Fix for bug 25348: Check for possible user-sensitive information and adjust category if any found
 - Fix for bug 25329: Set 3rd party libraries' logging system to Open-Xchange one

* 2013-03-15 - thorben.betten@open-xchange.com

 - Fix for bug 25332: Fixed entries in quota.yml file
 - Fix for bug 25334: Fixed possible 'java.lang.StringIndexOutOfBoundsException' when parsing CSS selectors
 - Fix for bug 25321: Repetitive sanitizing of HTML content until no further replacement/change has been performed

* 2013-03-14 - marcus.klein@open-xchange.com

 - Story 30395131: Added methods to database service for returning writable connections without incrementing the replication monitor
   counter.
 - Story 38666533: Reading now parallel from all database servers and serial through schemas of a database server to have the fastest
   possible listing of file store usage.
 - Story 28219067: The tasks component respects the globally defined object count quota when new tasks are created.

* 2013-03-12 - marcus.klein@open-xchange.com

 - Story 30395131: Added configuration option to disable the MySQL master/slave replication monitor.

* 2013-03-11 - tobias.friedrich@open-xchange.com

 - Fix for bug 25233: Made LDAP contact cache aware of possibly skipped empty distribution lists

* 2013-03-11 - marcus.klein@open-xchange.com

 - Fix for bug 25256: Removed refreshing of context and user objects when reading some of their attributes.

* 2013-03-08 - marcus.klein@open-xchange.com

 - Fix for bug 25244: SOAP attributes are not lower case.
 - Fix for bug 25253: Use cached entries as much as possible before converting data structures expensively.

* 2013-03-08 - thorben.betten@open-xchange.com

 - Fix for bug 25131: Avoid impossible WHERE in folder query

* 2013-03-07 - marcus.klein@open-xchange.com
