@@ -1,3 +1,7 @@
+* 2013-04-10 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 24662: Added dynamic checksum calculation for X-ABCROP-RECTANGLE parameter 
+
 * 2013-03-17 - thorben.betten@open-xchange.com
 
  - Fix for bug 25350: Reduced repetitive behavior to necessary sanitizing steps
